overlapp of header with sidebar on scrolling issue is fixed

--- a/NextGenSoftware.OASIS.API.ONODE.WebUI.HTML/wwwroot/assets/css/style.css
+++ b/NextGenSoftware.OASIS.API.ONODE.WebUI.HTML/wwwroot/assets/css/style.css
@@ -1440,7 +1440,12 @@ form {
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-clip: padding-box;
-  overflow-y: auto
+  /* overflow-y: auto */
+}
+
+.side-nav ul.side__list {
+  overflow-y: auto;
+  height: calc(100vh - 70px);
 }
 
 .side-nav a {
